force-app/main/default/objects/Pharma_product__c/fields/Business_type__c.field-meta.xml
<CustomField>
    <fullName>Business_type__c</fullName>
    <label>Business type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Pharmaceuticals</fullName>
            </value>
            <value>
                <fullName>Cosmetics.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>