force-app/main/default/objects/Pharma_product__c/fields/Manufacture__c.field-meta.xml
<CustomField>
    <fullName>Manufacture__c</fullName>
    <inlineHelpText>manufacture company</inlineHelpText>
    <label>Manufacture</label>
    <length>200</length>
    <type>Text</type>
</CustomField>