force-app/main/default/objects/Pharma_product__c/fields/Product_Spec__c.field-meta.xml
<CustomField>
    <fullName>Product_Spec__c</fullName>
    <label>Product Spec</label>
    <length>50</length>
    <type>Text</type>
</CustomField>