force-app/main/default/objects/Pharma_product__c/fields/Product_type__c.field-meta.xml
<CustomField>
    <fullName>Product_type__c</fullName>
    <inlineHelpText>Dosage ex 200g</inlineHelpText>
    <label>Product type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>150g</fullName>
            </value>
            <value>
                <fullName>200g</fullName>
            </value>
            <value>
                <fullName>400g</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>